# ai_tg_bot_orchestrator

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: config.py  dto.py  runtime.py
src/adapters/: kafka_consumer.py  kafka_producer.py
src/services/: base.py  gemini.py  registry.py
